Fixed ui issue of overlapping dropdowns and give appropriate margin to grid items

--- a/src/assets/scss/_plot.scss
+++ b/src/assets/scss/_plot.scss
@@ -15,7 +15,7 @@
     flex: 1;
     flex-direction: column;
     align-items: center;
-    padding-inline: 20px;
+    // padding-inline: 20px;
     height: 100%;
     width: 100%;
   }
@@ -23,6 +23,7 @@
   .plotly-chart {
     width: 100%;
     height: 70vh;
+    margin-inline: 20px;
   }
 
   .dropdown-select {
@@ -95,9 +96,6 @@
   }
   .grid-layout {
     margin-bottom: 12px;
-  }
-  .react-grid-item:hover{
-    z-index: 10;
   }
 
   .grid-container {
